--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,78 @@
-*,::before,::after{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+*,
+::before,
+::after {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	font-size: 62.5%;
+	// do em i rem tak żeby to było 10px
+	scroll-behavior: smooth;
+}
+
+.wrapper {
+	margin: 0 auto;
+	max-width: 120em;
+	width: 100%;
+}
+
+.burger__button {
+	position: relative;
+	display: flex;
+	justify-content: flex-end;
+	padding: 20px 10px;
+	text-decoration: none;
+	color: black;
+    cursor: pointer;
+
+	&__spin {
+		position: absolute;
+		height: 0.3em;
+		width: 2em;
+		background-color: black;
+	}
+
+	&__spin::before {
+        content: '';
+		position: absolute;
+        bottom: -0.7em;
+        right: 0.3em;
+		height: 0.3em;
+		width: 2em;
+		background-color: black;
+        
+	}
+
+    &__spin::after{
+        content: '';
+        position: absolute;
+        top: -0.7em;
+        right: 0.3em;
+        height: 0.3em;
+        width: 2em;
+        background-color: black;
+    }
+}
+
+.nav__project {
+	position: relative;
+	// 	background-color: aqua;
+	// }
+}
+.navigation_no_phone {
+	display: flex;
+	justify-content: space-around;
+	padding: 20px 10px;
+	background-color: gold;
+	&__nav__link {
+		text-decoration: none;
+		text-transform: uppercase;
+		color: black;
+		font-weight: 500;
+		.fa-solid {
+			font-size: 1.5em;
+		}
+	}
 }
